# mangrove-change-segmentation

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md
examples/: project.toml
src/mangrove_seg/: __init__.py  change.py  cli.py  config.py  data.py  discovery.py  evaluation.py  geospatial.py  inference.py  losses.py  model.py  optional.py  prepare.py  records.py  splitting.py  tiling.py  training.py
tests/: conftest.py  test_cli_and_model_contract.py  test_config.py  test_discovery_records_data.py  test_evaluation_and_change.py  test_inference.py  test_splitting.py  test_tiling.py
