[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "mangrove-change-segmentation"
version = "0.1.0"
description = "A reproducible geospatial pipeline for multi-year mangrove segmentation and change analysis"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Safouh Al Ajlani" }]
keywords = ["remote-sensing", "segmentation", "change-detection", "geospatial"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
  "numpy>=1.26,<3",
]

[project.urls]
Homepage = "https://github.com/safouha/mangrove-change-segmentation"
Repository = "https://github.com/safouha/mangrove-change-segmentation"
Issues = "https://github.com/safouha/mangrove-change-segmentation/issues"

[project.optional-dependencies]
geo = [
  "rasterio>=1.3,<2",
]
ml = [
  "tensorflow>=2.16,<3",
]
all = [
  "rasterio>=1.3,<2",
  "tensorflow>=2.16,<3",
]
dev = [
  "build>=1.2,<2",
  "mypy>=1.13,<2",
  "pytest>=8,<10",
  "ruff>=0.8,<1",
]

[project.scripts]
mangrove-seg = "mangrove_seg.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
markers = [
  "optional: tests that require an optional dependency",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
strict = true
files = ["src", "tests"]
warn_unreachable = true

[[tool.mypy.overrides]]
module = ["rasterio", "rasterio.*", "tensorflow", "tensorflow.*"]
ignore_missing_imports = true
